@@ -23,8 +23,7 @@ javafx {
 
 dependencies {
     runtimeOnly 'com.google.flogger:flogger-system-backend:0.5.1'
-    implementation 'com.calendarfx:view:11.8.3',
-            'com.google.flogger:flogger:0.5.1',
+    implementation 'com.google.flogger:flogger:0.5.1',
             'com.jfoenix:jfoenix:9.0.8',
             'org.kordamp.ikonli:ikonli-core:11.3.3',
             'org.kordamp.ikonli:ikonli-javafx:11.3.5',
@@ -33,7 +32,6 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
 }
-
 
 test {
     dependsOn 'cleanTest'
@@ -49,6 +47,18 @@ javadoc {
             "implNote:a:Implementation Note:"
     ]
 }
+
 application {
     mainClassName = 'jscolendar.App'
+}
+
+run {
+    jvmArgs = [
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
+    ]
 }
